--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
-		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022. </li>
+		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022, 2023. </li>
 		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science, 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Big Data Research (JBDR), 2020. </li>
 	</ul>
