--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    
+	    <li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
+	    <li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
 	    <li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
 	    <li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Wavo TX. </li>
 	    <li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
@@ -111,6 +114,12 @@
 
 
 <h2>Publications</h2>
+
+<p>
+	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. </br>
+	<font color=red>Chen Zhao</font>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
+	<em>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
+</p>
 
 <p>
 	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. </br>
