--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">03/2023 (scheduled):  Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">03/2023 (scheduled):  Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023: Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">02/2023: University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">01/2023: University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
