--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    
+	    <li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
 	    <li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
 	    <li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
 	    <li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
@@ -242,7 +242,7 @@
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
-		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData) 2021-2022.</li>
+		<li type="disc"> [PC Member] IEEE International Conference on Big Data (BigData) 2021-2023.</li>
 		<li type="disc"> [PC Member] IEEE International Conference on Data Mining (ICDM) 2021-2023.</li>
 		<li type="disc"> [PC Member] International Conference on Artificial Intelligence and Statistics (AISTATS) 2021.</li>
 		<li type="disc"> [Reviewer] International Conference on Intelligent Computing (ICIC) 2023.</li>
