--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
 	    <li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
 	    <li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
 	    <li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
@@ -252,9 +253,10 @@
 	</ul>
   <h4>Workshop</h4>
 	<ul>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] KDD 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD 2022 Workshop on Ethical Artificial Intelligence: Methods and Applications</a>.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
