--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	    <li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
+	    <li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
 	    <li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
 	    <li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
 	    <li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
@@ -274,6 +276,8 @@
 
 <h2>Academic Talks</h2>
 	<ul>
+		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany, NY, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville, TN, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">03/2023: Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">02/2023: University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
