--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 
 <h2>Academic Talks</h2>
 	<ul>
-		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany, NY, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville, TN, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany NY, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville TN, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">03/2023: Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">02/2023: University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
@@ -285,6 +285,7 @@
 		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">10/2022: NEC America Laboratory, Data Science and System Security group, Princeton NJ, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
 		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (<font color=red>Invited talk</font>).</li>
