--- a/index.html
+++ b/index.html
@@ -118,120 +118,111 @@
 
 <h2>Publications</h2>
 
+<h3>Conference Publications</h3>
 <p>
-	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. </br>
+	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2303.12698.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
 	<em>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
 </p>
-
 <p>
 	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. </br>
 	Xujiang Zhao, Xuchao Zhang, <font color=red>Chen Zhao</font>, Jin-Hee Cho, Lance Kaplan, Dong Hyun Jeong, Audun Jøsang, Haifeng Chen, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
 </p>
-	
-<p>
-	<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
-	Feng Mi, <font color=red>Chen Zhao</font>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham<br/>
-	<em>ArXiv preprint, 2301.08824</em>, 2023
-</p>
-
-<p>
-	<strong>[ArXiv preprint]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
-	Dennis Melamed, Cameron Johnson, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp<br/>
-	<em>ArXiv preprint, 2212.13876</em>, 2022
-</p>	
-
-<p>
-	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
-	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
-	<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
-</p>
-	
 <p>
 	<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
-</p>
-	
+</p>	
 <p>
 	<strong>[PAKDD'22]</strong> Layer Adaptive Deep Neural Networks for Out-of-distribution Detection. <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
 	Haoliang Wang, <font color=red>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
 	<em>The 26th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>, 2022
 </p>
-
 <p>
 	<strong>[AAAI'21]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
 	<em>AAAI Conference on Artificial Intelligence</em>, 2022, <em>and</em> <em>NeurIPS Workshop on MetaLearn</em>, 2021
 </p>
-
-<p>
-	<strong>[NeurIPS’21-W]</strong> A Reweighted Meta Learning Framework for Robust Few Shot Learning. </br>
-	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-	<em>NeurIPS Workshop on Meta-Learning (MetaLearn)</em>, 2021
-</p>
-
 <p>
 	<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2021
 </p>
-
 <p>
 	<strong>[ICBC'21]</strong> VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning. <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">PDF</a></br>
 	Feng Mi, Zhuoyi Wang, <font color=red>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency</em>, 2021
 </p>
-
 <p>
 	<strong>[WWW'21]</strong> CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining. <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
 	Zhuoyi Wang, Yuqiao Chen, <font color=red>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
 	<em>In Proceedings of the ACM International World Wide Web Conference</em>, 2021
 </p>
-
-<p>
-	<strong>[ArXiv preprint]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
-	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-	<em>ArXiv preprint, 2009.12675v2</em>, 2020
-</p>
-
 <p>
 	<strong>[ICDM'20]</strong> A Primal-Dual Subgradient Approach for Fair Meta Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2020
 </p>
-
 <p>
 	<strong>[ICKG'20]</strong> Fair Meta-Learning for Few-Shot Classification. <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
-
 <p>
 	<strong>[ICKG'20]</strong> Unfairness Discovery and Prevention for Few-Shot Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
-
 <p>
 	<strong>[ICDM'19]</strong> Rank-Based Multi-task Learning for Fair Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2019
 </p>
 
+
+<h3>Workshop Publications</h3>
+<p>
+	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
+	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
+	<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
+</p>
+<p>
+	<strong>[NeurIPS’21-W]</strong> A Reweighted Meta Learning Framework for Robust Few Shot Learning. </br>
+	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
+	<em>NeurIPS Workshop on Meta-Learning (MetaLearn)</em>, 2021
+</p>
+
+	
+<h3>Journal Publications</h3>
 <p>
 	<strong>[Development'17]</strong> CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
 	Jingjing Li, Lianjie Miao, <font color=red>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
 	Development, 147-173, 2017 
 </p>
-
 <p>
 	<strong>[Development'14]</strong> Numb family proteins are essential for cardiac morphogenesis and progenitor differentiation. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/141/2/281/46425/Numb-family-proteins-are-essential-for-cardiac">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Hua Guo, Jingjing Li, Thomas Myint, William Pittman, Le Yang, Weimin Zhong, Robert J. Schwartz, John J. Schwarz, Harold A. Singer, Michelle D. Tallquist, Mingfu Wu<br/>
 	Development, 141(2):281-95, 2014
 </p>
 
+	
+<h3>ArXiv Preprints</h3>
+<p>
+	<strong>[ArXiv preprint]</strong> An Automated Vulnerability Detection Framework for Smart Contracts. <a class="btn btn-red" href="https://arxiv.org/pdf/2301.08824.pdf">PDF</a></br>
+	Feng Mi, <font color=red>Chen Zhao</font>, Zhuoyi Wang, Sadaf MD Halim, Xiaodi Li, Zhouxiang Wu, Latifur Khan, Bhavani Thuraisingham<br/>
+	<em>ArXiv preprint, 2301.08824</em>, 2023
+</p>
+<p>
+	<strong>[ArXiv preprint]</strong> xFBD: Focused Building Damage Dataset and Analysis. <a class="btn btn-red" href="https://arxiv.org/pdf/2212.13876.pdf">PDF</a></br>
+	Dennis Melamed, Cameron Johnson, <font color=red>Chen Zhao</font>, Russell Blue, Philip Morrone, Anthony Hoogs, Brian Clipp<br/>
+	<em>ArXiv preprint, 2212.13876</em>, 2022
+</p>
+<p>
+	<strong>[ArXiv preprint]</strong> PDFM: A Primal-Dual Fairness-Aware Framework for Meta-learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2009.12675v2.pdf">PDF</a></br>
+	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
+	<em>ArXiv preprint, 2009.12675v2</em>, 2020
+</p>	
 	
 
 <h2>Academic Services</h2>
