--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <h2>Publications</h2>
 
-<h3>Conference Publications</h3>
+<h3>Conferences</h3>
 <p>
 	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2303.12698.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
@@ -142,7 +142,7 @@
 <p>
 	<strong>[AAAI'21]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-	<em>AAAI Conference on Artificial Intelligence</em>, 2022, <em>and</em> <em>NeurIPS Workshop on MetaLearn</em>, 2021
+	<em>AAAI Conference on Artificial Intelligence</em>, 2022
 </p>
 <p>
 	<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
@@ -181,7 +181,7 @@
 </p>
 
 
-<h3>Workshop Publications</h3>
+<h3>Workshops</h3>
 <p>
 	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
 	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
@@ -194,7 +194,7 @@
 </p>
 
 	
-<h3>Journal Publications</h3>
+<h3>Journals</h3>
 <p>
 	<strong>[Development'17]</strong> CDC42 is required for epicardial and pro-epicardial development by mediating FGF receptor trafficking to plasma membrane. <a class="btn btn-red" href="https://journals.biologists.com/dev/article/144/9/1635/48420/CDC42-is-required-for-epicardial-and-pro?searchresult=1">PDF</a></br>
 	Jingjing Li, Lianjie Miao, <font color=red>Chen Zhao</font>, Wasay Mohiuddin Shaikh Qureshi, David Shieh, Hua Guo, Yangyang Lu, Saiyang Hu, Alice Huang, Lu Zhang, Chen-leng Cai, Leo Q. Wan, Hongbo Xin, Peter Vincent, Harold A. Singer, Yi Zheng, Ondine Cleaver, Zhen-Chuan Fan, Mingfu Wu<br/>
@@ -226,7 +226,7 @@
 	
 
 <h2>Academic Services</h2>
-  <h4>Conference</h4>
+  <h3>Conferences</h3>
     	<ul>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD) 2023.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
@@ -244,7 +244,7 @@
 		<li type="disc"> [PC Member] International Conference on Automated Machine Learning (AutoML) 2022.</li>
 		<li type="disc"> [TPC member] International Conference on Networks, Communication and Information Technology (NCIT) 2023. </li>
 	</ul>
-  <h4>Workshop</h4>
+  <h3>Workshops</h3>
 	<ul>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] KDD 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
@@ -253,7 +253,7 @@
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
 		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
 	</ul>
-  <h4>Journal Reviewer</h4>
+  <h3>Journals</h3>
     	<ul>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
@@ -291,7 +291,7 @@
 	</ul>
 
 <h2>Teaching</h2>
-  <h4>The State University of New York at Albany</h4>
+  <h3>The State University of New York at Albany</h3>
 	<ul>
 		<li type="disc">Spring 2023, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
 		<li type="disc">Fall 2022, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-inf-428-528/">INF 428/528 Analysis, Visualization, and Prediction in Analytics</a>. </li>
@@ -299,7 +299,7 @@
 		<li type="disc">Fall 2017, Teaching Assistant, ICSI 518 Software Engineering. </li>
 		<li type="disc">Fall 2016, Spring 2016, Fall 2015, Teaching Assistant, ICSI 201 Introduction of Computer Science. </li>
 	</ul>
-  <h4>The University of Texas at Dallas</h4>
+  <h3>The University of Texas at Dallas</h3>
 	<ul>
 		<li type="disc">Summer 2021, Teaching Assistant, CS 6385 Algorithmic Aspects of Telecommunication Networks. </li>
 		<li type="disc">Summer 2021, Teaching Assistant, CS 4365 Artificial Intelligence. </li>
@@ -307,7 +307,7 @@
 		<li type="disc">Fall 2019, <font color=red>Co-Instructor</font>, <a href="https://personal.utdallas.edu/~fxc190007/courses/6364/">CS 6364 Artificial Intelligence</a>. </li>
 		<li type="disc">Fall 2019, Teaching Assistant, CS 6301 Convolutional Neural Network. </li>
 	</ul>
-  <h4>Albany Medical College</h4>
+  <h3>Albany Medical College</h3>
 	<ul>
 		<li type="disc">Spring 2015, Spring 2014, Teaching Assistant, MCP 608 Cardiovascular Physiology. </li>
 		<li type="disc">Spring 2015, Spring 2014, Teaching Assistant, MCP 609 Respiratory & Renal Physiology. </li>
