--- a/index.html
+++ b/index.html
@@ -266,29 +266,34 @@
 	</ul>
 
 <h2>Academic Talks</h2>
+  <h3>Invited Talks</h3>
 	<ul>
-		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany NY, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville TN, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">03/2023: Baylor University, Department of Computer Science, Waco TX, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">02/2023: University of Mississippi, Department of Computer and Information Science, Oxford MS, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">01/2023: University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA (<font color=red>Invited talk</font>).</li>
-		<li type="disc">10/2022: NEC America Laboratory, Data Science and System Security team, Princeton NJ, USA (<font color=red>Invited talk</font>).</li>
+		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany NY, USA.</li>
+		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville TN, USA.</li>
+		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA.</li>
+		<li type="disc">03/2023: Baylor University, Department of Computer Science, Waco TX, USA.</li>
+		<li type="disc">02/2023: University of Mississippi, Department of Computer and Information Science, Oxford MS, USA.</li>
+		<li type="disc">01/2023: University of Alabama at Birmingham, Department of Computer Science, Birmingham AL, USA.</li>
+		<li type="disc">12/2022: University of Central Missouri, Department of Computer Science, Warrensburg CO, USA.</li>
+		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA.</li>
+		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA.</li>
+		<li type="disc">10/2022: NEC America Laboratory, Data Science and System Security team, Princeton NJ, USA.</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
-		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
-		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China (<font color=red>Invited talk</font>).</li>
-		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China (<font color=red>Invited talk</font>).</li>
+		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China.</li>
+		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China.</li>
+		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China.</li>
+		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
+	</ul>
+  <h3>Others</h3>
+	<ul>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
 		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
 		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China.</li>
 		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster presentation).</li>
-		<li type="disc">04/2015: Shaker High School, Latham NY, USA (<font color=red>Invited talk</font>).</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
-	</ul>
+	<\ul>
+
 
 <h2>Teaching</h2>
   <h3>The State University of New York at Albany</h3>
