--- a/index.html
+++ b/index.html
@@ -96,24 +96,25 @@
 </table>
 
 <h2>About Me</h2>
-	<p style="text-align:justify;">I am currently a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. Prior to working at Kitware Inc, I received my doctoral degree in computer science from <a href="https://www.utdallas.edu/">The University of Texas at Dallas</a> in 2021, under the supervision of Prof. <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. In 2016, I received dual M.S. degrees in computer science and biomedical science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a>, respectively. My researches focus on Machine Learning, Deep Learning, Data Mining, and Computer Vision.
+	<p style="text-align:justify;">
+		I am currently a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. Prior to working at Kitware Inc, I received my doctoral degree in computer science from <a href="https://www.utdallas.edu/">The University of Texas at Dallas</a> in 2021, under the supervision of Prof. <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. In 2016, I received dual M.S. degrees in computer science and biomedical science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a>, respectively. My researches focus on Machine Learning, Deep Learning, Data Mining, and Computer Vision.
 	</p>
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	    <li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
-	    <li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
-	    <li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
-	    <li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
-	    <li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
-	    <li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
-	    <li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
-	    <li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Wavo TX. </li>
-	    <li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
-	    <li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
-	    <li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
-	    <li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
-    </ul><br>
+	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
+	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
+	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
+	<li type="circle">[03/2023] I will serve as a PC member for IEEE Bigdata 2023. </li>
+	<li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
+	<li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
+	<li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
+	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Wavo TX. </li>
+	<li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
+	<li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
+	<li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
+	<li type="circle">[12/2022] I will serve as a PC member (research track) for ACM SIGKDD 2023. </li>
+    </ul>
 
 
 <h2>Publications</h2>
