--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 	</ul>
   <h3>Workshops</h3>
 	<ul>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] KDD 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI 2023 Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
 		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
@@ -279,7 +279,6 @@
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA.</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA.</li>
 		<li type="disc">10/2022: NEC America Laboratory, Data Science and System Security team, Princeton NJ, USA.</li>
-		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China.</li>
 		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China.</li>
 		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China.</li>
@@ -287,6 +286,7 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
 		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
