--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
 	<li type="circle">[03/2023] Two workshop proposals were accepted by KDD 2023. I will serve as organizers and chairs. </li>
@@ -269,6 +270,7 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">04/2023: Indiana State University, Department of Electronics and Computer Engineering Technology, Terre Haute, IN, USA.</li>
 		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany NY, USA.</li>
 		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville TN, USA.</li>
 		<li type="disc">03/2023: Millersville University, Department of Computer Science, Millersville PA, USA.</li>
