--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by Tennessee State University, Nashville TN. </li>
@@ -230,6 +231,7 @@
 <h2>Academic Services</h2>
   <h3>Conferences</h3>
     	<ul>
+		<li type="disc"> [Reviewer] The Conference on Neural Information Processing Systems (NeurIPS) 2023.</li>
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD) 2023.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
