--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<li type="circle">[02/2023] One paper was accepted by CVPR 2023. </li>
 	<li type="circle">[02/2023] I will serve as a PC member for ICDM 2023. </li>
 	<li type="circle">[02/2023] I will serve as a PC member for ECMLPKDD 2023. </li>
-	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Wavo TX. </li>
+	<li type="circle">[02/2023] I was invited to give an academic talk by Baylor University, Waco TX. </li>
 	<li type="circle">[02/2023] One paper was accepted by ICASSP 2023. </li>
 	<li type="circle">[02/2023] I was invited to give an academic talk by the University of Mississippi, Oxford MS. </li>
 	<li type="circle">[01/2023] I will serve as a PC member (applied data science track) for ACM SIGKDD 2023. </li>
