--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
 					<h1>Chen Zhao, Ph.D. &nbsp; </h1>
 				</div>
 				<p>
-					Senior R&D Engineer<br>
-					<a href="https://www.kitware.com/">Kitware Inc.</a><br>
-					1712 Route 9, Suite 300, Clifton Park, New York 12065, United States<br>
+					Assistant Professor<br>
+					<a href="https://www.ecs.baylor.edu/research-departments/computer-science">Department of Computer Science</a><br>
+					<a href="https://www.ecs.baylor.edu/">School of Engineering and Computer Science</a><br>
+					<a href="https://www.baylor.edu/">Baylor University</a><br>
+					One Bear Place #97141, Waco, TX 76798-7141, United States<br>
 					
 					<br>
 					
