--- a/index.html
+++ b/index.html
@@ -97,9 +97,16 @@
 	</tbody>
 </table>
 
-<h2>About Me</h2>
+<h2>Biography</h2>
 	<p style="text-align:justify;">
-		I am currently a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. Prior to working at Kitware Inc, I received my doctoral degree in computer science from <a href="https://www.utdallas.edu/">The University of Texas at Dallas</a> in 2021, under the supervision of Prof. <a href="https://personal.utdallas.edu/~fxc190007/">Feng Chen</a>. In 2016, I received dual M.S. degrees in computer science and biomedical science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a>, respectively. My researches focus on Machine Learning, Deep Learning, Data Mining, and Computer Vision.
+		Chen Zhao is an Assistant Professor in the Department of Computer Science at Baylor University. 
+		Prior to joining Baylor, he was a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. 
+		He earned his Ph.D. degree in Computer Science from <a href="https://www.utdallas.edu/">the University of Texas at Dallas</a> in 2021. 
+		He received dual M.S. degrees in Computer Science and Biomedical Science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a> in 2016. 
+		<br>
+		His researches focus on machine learning, data mining, and artificial intelligence, particularly fairness-aware machine learning, novelty detection, and domain generalization.
+		His publications have appeared in prestigious conferences and journals including KDD, CVPR, WWW, AAAI, ICDM, ICASSP etc. 
+		He has served as PC members for several international conferences, such as NeurIPS, KDD, AAAI, IJCAI, etc.
 	</p>
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
