--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 					<br>
 					
 					Adjunct Professor<br>
+					<a href="https://www.albany.edu/cehc/departments/information-sciences-and-technology">Department of Information Science</a><br>
+					<a href="https://www.albany.edu/cehc">College of Emergency Preparedness, Homeland Security & Cybersecurity</a><br>
 					<a href="https://www.albany.edu/">University at Albany - State University of New York</a><br>
 					1400 Washington Ave, Albany, NY 12222, United States<br>
 					
