--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<br>
 					
 					Adjunct Professor<br>
-					<a href="https://www.albany.edu/cehc/departments/information-sciences-and-technology">Department of Information Science</a><br>
+					<a href="https://www.albany.edu/cehc/departments/information-sciences-and-technology">Department of Information Sciences and Technology</a><br>
 					<a href="https://www.albany.edu/cehc">College of Emergency Preparedness, Homeland Security & Cybersecurity</a><br>
 					<a href="https://www.albany.edu/">University at Albany - State University of New York</a><br>
 					1400 Washington Ave, Albany, NY 12222, United States<br>
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
 	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
 	<li type="circle">[03/2023] I was invited to give an academic talk by SUNY at Albany, Albany NY. </li>
@@ -354,7 +355,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on March, 2023<br>
+				<p align="right"><font size="2">Last Updated on May, 2023<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
