--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 <h2>Biography</h2>
 	<p style="text-align:justify;">
-		Chen Zhao is an Assistant Professor in the Department of Computer Science at Baylor University. 
+		Dr. Chen Zhao is an Assistant Professor in the Department of Computer Science at Baylor University. 
 		Prior to joining Baylor, he was a senior R&D computer vision engineer at <a href="https://www.kitware.com/">Kitware Inc</a>. 
 		He earned his Ph.D. degree in Computer Science from <a href="https://www.utdallas.edu/">the University of Texas at Dallas</a> in 2021. 
 		He received dual M.S. degrees in Computer Science and Biomedical Science from <a href="https://www.albany.edu/">University at Albany, SUNY</a> and <a href="https://www.amc.edu/academic/">Albany Medical College</a> in 2016. 
