--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2023] I will serve as a Program Committee for CIKM 2023. </li>
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
 	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
@@ -247,7 +248,7 @@
 		<li type="disc"> [PC Member] European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML PKDD) 2023.</li>
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
-		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022.</li>
+		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022-2023.</li>
 		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2023.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM) 2022.</li>
