--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
-	<li type="circle">[05/2023] I will serve as a Program Committee for CIKM 2023. </li>
+	<li type="circle">[05/2023] I will serve as a PC member for CIKM 2023. </li>
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
 	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
 	<li type="circle">[04/2023] I was invited to give an academic talk by Indiana State University, Terre Haute, IN. </li>
