--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2023] One paper was accepted by KDD 2023. </li>
 	<li type="circle">[05/2023] I will serve as a PC member for CIKM 2023. </li>
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
 	<li type="circle">[04/2023] I will serve as a reviewer for NeurIPS 2023. </li>
@@ -135,6 +136,11 @@
 <h2>Publications</h2>
 
 <h3>Conferences</h3>
+<p>
+	<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. </br>
+	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2023
+</p>
 <p>
 	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2303.12698.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
