--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2023] I was invite to give an academic talk by Yunnan University, Kunming, China. </li>
+	<li type="circle">[05/2023] I was invite to give an academic talk by Southwestern University of Fiance and Economics, Chengdu, China. </li>
+	<li type="circle">[05/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
 	<li type="circle">[05/2023] One paper was accepted by KDD 2023. </li>
 	<li type="circle">[05/2023] I will serve as a PC member for CIKM 2023. </li>
 	<li type="circle">[04/2023] I will join Baylor University as a tenure-track Assistant Professor in the Department of Computer Science. </li>
@@ -291,6 +294,9 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">05/2023: Yunnan University, School of Information Science and Engineering, Kunming, China.</li>
+		<li type="disc">05/2023: Southwestern University of Finance and Economics, School of Business Administration, Chengdu, China.</li>
+		<li type="disc">05/2023: AI TIME, Beijing, China.</li>
 		<li type="disc">04/2023: Indiana State University, Department of Electronics and Computer Engineering Technology, Terre Haute, IN, USA.</li>
 		<li type="disc">04/2023: SUNY at Albany, Department of Computer Science, Albany NY, USA.</li>
 		<li type="disc">03/2023: Tennessee State University, Department of Computer Science, Nashville TN, USA.</li>
@@ -302,9 +308,9 @@
 		<li type="disc">11/2022: East Carolina University, Department of Computer Science, Greenville NC, USA.</li>
 		<li type="disc">11/2022: The University of Texas at Dallas, Department of Computer Science, Richardson TX, USA.</li>
 		<li type="disc">10/2022: NEC America Laboratory, Data Science and System Security team, Princeton NJ, USA.</li>
-		<li type="disc">07/2022: Tsinghua University, AI TIME, Beijing, China.</li>
+		<li type="disc">07/2022: AI TIME, Beijing, China.</li>
 		<li type="disc">05/2022: Tianjin University, Smart Society and Big Data Intelligence Lab, Tianjin, China.</li>
-		<li type="disc">11/2021: Tsinghua University, AI TIME, Beijing, China.</li>
+		<li type="disc">11/2021: AI TIME, Beijing, China.</li>
 		<li type="disc">04/2015: Shaker High School, Latham NY, USA.</li>
 	</ul>
   <h3>Others</h3>
