--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[05/2023] I will serve as a reviewer for SPIGM workshop at ICML 2023. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Yunnan University, Kunming, China. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Southwestern University of Fiance and Economics, Chengdu, China. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
@@ -272,12 +273,13 @@
 	</ul>
   <h3>Workshops</h3>
 	<ul>
+		<li type="disc"> [Reviewer] ICML Workshop on Structured Probabilistic Inference & Generative Modeling (SPIGM), 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [Reviewer] AutoML 2022 Late-Breaking Workshop 2022.</li>
+		<li type="disc"> [Reviewer] AutoML Workshop on Late-Breaking, 2022.</li>
 		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Reviewer] WACV Workshop on Dealing with Novelty in Open Worlds, 2022-2023.</li>
-		<li type="disc"> [Reviewer] NeurIPS 2021 Workshop on Meta-Learning.</li>
+		<li type="disc"> [Reviewer] NeurIPS Workshop on Meta-Learning, 2021.</li>
 	</ul>
   <h3>Journals</h3>
     	<ul>
@@ -286,7 +288,7 @@
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Software Engineering (TSE), 2022. </li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
-		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022, 2023. </li>
+		<li type="disc"> [Reviewer] Journal of Frontiers in Big Data, 2022-2023. </li>
 		<li type="disc"> [Reviewer] Environment and Planning B: Urban Analytics and City Science, 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Big Data Research (JBDR), 2020. </li>
 	</ul>
