--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <h3>Conferences</h3>
 <p>
-	<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. </br>
+	<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2306.01007.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
 	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2023
 </p>
