--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	<em>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
 </p>
 <p>
-	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. </br>
+	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/10096305">PDF</a></br>
 	Xujiang Zhao, Xuchao Zhang, <font color=red>Chen Zhao</font>, Jin-Hee Cho, Lance Kaplan, Dong Hyun Jeong, Audun Jøsang, Haifeng Chen, Feng Chen<br/>
 	<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
 </p>
