--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
 
 <h3>Workshops</h3>
 <p>
+	<strong>[KDD'23-W]</strong> Learning Fair and Domain Generalization Representation. </br>
+	Dong Li, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao<br/>
+	<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications (EAI)</em>, 2023
+</p>
+<p>
+	<strong>[KDD'23-W]</strong> Adaptation Speed of Causal Models Concerning Fairness. </br>
+	Yujie Lin, <font color=red>Chen Zhao</font>, Minglai Shao, Xujiang Zhao, Haifeng Chen<br/>
+	<em>KDD workshop on Ethical Artificial Intelligence: Methods and Applications (EAI)</em>, 2023
+</p>
+<p>
 	<strong>[AAAI'23-W]</strong> Detecting Multi-Label Out-of-Distribution Nodes on Graphs. </br>
 	Ruomeng Ding, Xujiang Zhao, <font color=red>Chen Zhao</font>, Minglai Shao<br/>
 	<em>AAAI workshop on Uncertainty Reasoning and Quantification in Decision Making (UDM)</em>, 2023
