--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					
 					<br>
 					
-					Email:  <a href="charliezhaoyinpeng@gmail.com">charliezhaoyinpeng@gmail.com</a><br>
+					Email:  <a href="chen_zhao@baylor.edu">chen_zhao@baylor.edu</a><br>
 					<br>
 					<a href="https://github.com/charliezhaoyinpeng"> <img src="./files/logo-github.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
 					<a href="https://scholar.google.com/citations?user=xebNvXQAAAAJ&hl=en"> <img src="./files/logo-googlescholar.png" height="30px" style="margin-bottom:-3px; margin-right: 10px"> </a>
