--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
 	<li type="circle">[05/2023] I will serve as a reviewer for SPIGM workshop at ICML 2023. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Yunnan University, Kunming, China. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Southwestern University of Fiance and Economics, Chengdu, China. </li>
@@ -293,6 +294,7 @@
 	</ul>
   <h3>Journals</h3>
     	<ul>
+		<li type="disc"> [Reviewer] Transactions on Knowledge Discovery from Data (TKDD), 2023. </li>
 		<li type="disc"> [Reviewer] Journal of Knowledge-based Systems (KBS), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2022. </li>
 		<li type="disc"> [Reviewer] Journal of Springer Machine Learning (MACH), 2022. </li>
