--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
+	<li type="circle">[07/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
 	<li type="circle">[05/2023] I will serve as a reviewer for SPIGM workshop at ICML 2023. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Yunnan University, Kunming, China. </li>
 	<li type="circle">[05/2023] I was invite to give an academic talk by Southwestern University of Fiance and Economics, Chengdu, China. </li>
