--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">07/2023: AI TIME, Beijing, China.</li>
 		<li type="disc">05/2023: Yunnan University, School of Information Science and Engineering, Kunming, China.</li>
 		<li type="disc">05/2023: Southwestern University of Finance and Economics, School of Business Administration, Chengdu, China.</li>
 		<li type="disc">05/2023: AI TIME, Beijing, China.</li>
@@ -330,6 +331,8 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
+		<li type="disc">07/2023: ACM Conference on Knowledge Discovery and Data Mining, Long Beach, California, USA.</li>
+		<li type="disc">06/2023: IEEE/CVF Conference on Computer Vision and Pattern Recognition, Vancouver, Canada.</li>
 		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
 		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
 		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
@@ -383,7 +386,7 @@
 						   
 			<td valign="top">
 				<div style="clear:both;">
-				<p align="right"><font size="2">Last Updated on May, 2023<br>
+				<p align="right"><font size="2">Last Updated on July, 2023<br>
 				Published with <a href="https://pages.github.com/">GitHub Pages</a></font></p>
 				</div>
 			</td>
