--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
 	<li type="circle">[07/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
 	<li type="circle">[05/2023] I will serve as a reviewer for SPIGM workshop at ICML 2023. </li>
@@ -271,7 +272,7 @@
 		<li type="disc"> [PC Member] International Joint Conference on Artificial Intelligence (IJCAI) 2023.</li>
 		<li type="disc"> [Reviewer] IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2023.</li>
 		<li type="disc"> [PC Member] ACM International Conference on Information and Knowledge Management (CIKM) 2022-2023.</li>
-		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2023.</li>
+		<li type="disc"> [PC Member on Research and Applied Science Tracks, <font color=red>Mentor at KDD-UC</font>, <font color=red>Session Chair at ADS</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD) 2020-2023.</li>
 		<li type="disc"> [PC Member] AAAI Conference on Artificial Intelligence (AAAI) 2022.</li>
 		<li type="disc"> [PC Member] SIAM International Conference on Data Mining (SDM) 2022.</li>
 		<li type="disc"> [PC Member] International Conference on Web Search and Data Mining (WSDM) 2022.</li>
