--- a/index.html
+++ b/index.html
@@ -146,67 +146,67 @@
 <p>
 	<strong>[KDD'23]</strong> Towards Fair Disentangled Online Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2306.01007.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Christan Earl Grant, Feng Chen.<br/>
-	<em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2023
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2023
 </p>
 <p>
 	<strong>[CVPR'23]</strong> Open Set Action Recognition via Multi-Label Evidential Learning. <a class="btn btn-red" href="https://arxiv.org/pdf/2303.12698.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Dawei Du, Anthony Hoogs, Christopher Funk.<br/>
-	<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
+	<em>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition</em>, 2023
 </p>
 <p>
 	<strong>[ICASSP'23]</strong> Multi-Label Temporal Evidential Neural Networks for Early Event Detection. <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/10096305">PDF</a></br>
 	Xujiang Zhao, Xuchao Zhang, <font color=red>Chen Zhao</font>, Jin-Hee Cho, Lance Kaplan, Dong Hyun Jeong, Audun Jøsang, Haifeng Chen, Feng Chen<br/>
-	<em>IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
+	<em>In Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing</em>, 2023
 </p>
 <p>
 	<strong>[KDD'22]</strong> Adaptive Fairness-Aware Online Meta-Learning for Changing Environments. <a class="btn btn-red" href="https://arxiv.org/pdf/2205.11264v2.pdf">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Mi, Xintao Wu, Kai Jiang, Latifur Khan, Feng Chen<br/>
-	<em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2022
 </p>	
 <p>
 	<strong>[PAKDD'22]</strong> Layer Adaptive Deep Neural Networks for Out-of-distribution Detection. <a class="btn btn-red" href="https://arxiv.org/abs/2203.00192">PDF</a></br>
 	Haoliang Wang, <font color=red>Chen Zhao</font>, Xujiang Zhao, Feng Chen<br/>
-	<em>Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>, 2022
+	<em>In Proceedings of the Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>, 2022
 </p>
 <p>
 	<strong>[AAAI'21]</strong> A Nested Bi-level Optimization Framework for Robust Few-Shot Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2011.06782">PDF</a></br>
 	Krishnateja Killamsetty, Changbin Li, <font color=red>Chen Zhao</font>, Rishabh Krishnan Iyer, Feng Chen<br/>
-	<em>AAAI Conference on Artificial Intelligence</em>, 2022
+	<em>In Proceedings of the AAAI Conference on Artificial Intelligence</em>, 2022
 </p>
 <p>
 	<strong>[KDD'21]</strong> Fairness-Aware Online Meta-learning. <a class="btn btn-red" href="https://arxiv.org/abs/2108.09435">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen, Bhavani Thuraisingham<br/>
-	<em>ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2021
+	<em>In Proceedings of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining</em> (<strong>research track</strong>), 2021
 </p>
 <p>
 	<strong>[ICBC'21]</strong> VSCL: Automating Vulnerability Detection in Smart Contracts with Deep Learning. <a class="btn btn-red" href="https://ieeexplore.ieee.org/document/9461050">PDF</a></br>
 	Feng Mi, Zhuoyi Wang, <font color=red>Chen Zhao</font>, Jinghui Guo, Fawaz Ahmed, Latifur Khan<br/>
-	<em>IEEE International Conference on Blockchain and Cryptocurrency</em>, 2021
+	<em>In Proceedings of the IEEE International Conference on Blockchain and Cryptocurrency</em>, 2021
 </p>
 <p>
 	<strong>[WWW'21]</strong> CLEAR: Contrastive-Prototype Learning with Drift Estimation for Resource Constrained Stream Mining. <a class="btn btn-red" href="https://dl.acm.org/doi/abs/10.1145/3442381.3449820">PDF</a> </br>
 	Zhuoyi Wang, Yuqiao Chen, <font color=red>Chen Zhao</font>, Hemeng Tao, Yu Lin, Xujiang Zhao, Yigong Wang and Latifur Khan<br/>
-	<em>ACM International World Wide Web Conference</em>, 2021
+	<em>In Proceedings of the ACM International World Wide Web Conference</em>, 2021
 </p>
 <p>
 	<strong>[ICDM'20]</strong> A Primal-Dual Subgradient Approach for Fair Meta Learning. <a class="btn btn-red" href="https://arxiv.org/abs/2009.12675v3">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen, Zhuoyi Wang, Latifur Khan<br/>
-	<em>IEEE International Conference on Data Mining</em>, 2020
+	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2020
 </p>
 <p>
 	<strong>[ICKG'20]</strong> Fair Meta-Learning for Few-Shot Classification. <a class="btn btn-red" href="https://arxiv.org/abs/2009.13516">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Changbin Li, Jincheng Li, Feng Chen<br/>
-	<em>IEEE International Conference on Knowledge Graph</em>, 2020 
+	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
 <p>
 	<strong>[ICKG'20]</strong> Unfairness Discovery and Prevention for Few-Shot Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11406">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen<br/>
-	<em>IEEE International Conference on Knowledge Graph</em>, 2020 
+	<em>In Proceedings of the IEEE International Conference on Knowledge Graph</em>, 2020 
 </p>
 <p>
 	<strong>[ICDM'19]</strong> Rank-Based Multi-task Learning for Fair Regression. <a class="btn btn-red" href="https://arxiv.org/abs/2009.11405">PDF</a></br>
 	<font color=red>Chen Zhao</font>, Feng Chen<br/>
-	<em>IEEE International Conference on Data Mining</em>, 2019
+	<em>In Proceedings of the IEEE International Conference on Data Mining</em>, 2019
 </p>
 
 
