--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
 <h2>News [<img src="./index_files//update.gif">]</h2>
     <ul>
+	<li type="circle">[08/2023] I was invite to give an academic talk by Beijing Association for Science and Technology, Beijing, China. </li>   
 	<li type="circle">[07/2023] I will serve as a Session Chair for the ADS track at KDD 2023. </li>
 	<li type="circle">[07/2023] I will serve as a reviewer for TKDD 2023. </li>
 	<li type="circle">[07/2023] I was invite to give an academic talk by AI TIME, Beijing, China. </li>
@@ -316,6 +317,7 @@
 <h2>Academic Talks</h2>
   <h3>Invited Talks</h3>
 	<ul>
+		<li type="disc">08/2023: Beijing Association for Science and Technology, Beijing, China.</li>
 		<li type="disc">07/2023: AI TIME, Beijing, China.</li>
 		<li type="disc">05/2023: Yunnan University, School of Information Science and Engineering, Kunming, China.</li>
 		<li type="disc">05/2023: Southwestern University of Finance and Economics, School of Business Administration, Chengdu, China.</li>
@@ -351,6 +353,10 @@
 
 
 <h2>Teaching</h2>
+  <h3>Baylor University</h3>
+	<ul>
+		<li type="disc">Fall 2023, <font color=red>Instructor</font>, DSC 2350 Discrete Structures for Data Science. </li>
+	</ul>
   <h3>The State University of New York at Albany</h3>
 	<ul>
 		<li type="disc">Spring 2023, Spring 2022, <font color=red>Instructor</font>, <a href="https://charliezhaoyinpeng.github.io/ualbany-INF-108/">INF 108 Programming for Problem Solving</a>. </li>
