--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
-		<li type="disc"> [<font color=red>Session Chair at ADS</font>] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
-		<li type="disc"> [<font color=red>Orgnizer, Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
+		<li type="disc"> [<font color=red>Session Chair</font> at ADS] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-KDD23/">KDD Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/UDM-AAAI23/">AAAI Workshop on Uncertainty Reasoning and Quantification in Decision Making</a>, 2023.</li>
+		<li type="disc"> [<font color=red>Orgnizer</font>, <font color=red>Chair</font>] <a href="https://charliezhaoyinpeng.github.io/EAI-KDD22/">KDD Workshop on Ethical Artificial Intelligence: Methods and Applications</a>, 2022-2023.</li>
 		<li type="disc"> [Mentor at KDD-UC] ACM Conference on Knowledge Discovery and Data Mining (KDD), 2022.</li>
 		<li type="disc"> [Editorial Board Member] American Journal of Data Mining and Knowledge Discovery (AJDMKD), 2022-2024. </li>
 	</ul>
