--- a/index.html
+++ b/index.html
@@ -340,14 +340,14 @@
 	</ul>
   <h3>Others</h3>
 	<ul>
-		<li type="disc">07/2023: ACM Conference on Knowledge Discovery and Data Mining, Long Beach, California, USA.</li>
-		<li type="disc">06/2023: IEEE/CVF Conference on Computer Vision and Pattern Recognition, Vancouver, Canada.</li>
-		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA.</li>
-		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore.</li>
-		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy.</li>
-		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two talks).</li>
-		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China.</li>
-		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster presentation).</li>
+		<li type="disc">07/2023: ACM Conference on Knowledge Discovery and Data Mining, Long Beach, California, USA (oral and poster).</li>
+		<li type="disc">06/2023: IEEE/CVF Conference on Computer Vision and Pattern Recognition, Vancouver, Canada (poster).</li>
+		<li type="disc">08/2022: ACM Conference on Knowledge Discovery and Data Mining, Washington D.C., USA (oral and poster).</li>
+		<li type="disc">08/2021: ACM Conference on Knowledge Discovery and Data Mining, Singapore (oral and poster).</li>
+		<li type="disc">11/2020: IEEE International Conference on Data Mining, Sorrento, Italy (oral).</li>
+		<li type="disc">08/2020: IEEE International Conference on Knowledge Graph, Nanjing, China (two oral talks).</li>
+		<li type="disc">11/2019: IEEE International Conference on Data Mining, Beijing, China (oral).</li>
+		<li type="disc">05/2015: Weinstein Cardiovascular Development Conference, Boston MA, USA (poster).</li>
 		<li type="disc">10/2013: North American Vascular Biology Organization (NAVBO) Conference, Hyannis MA, USA (poster).</li>
 	</ul>
 
